# sdif

./: README.md  pyproject.toml
src/sdif/: model_meta.py  records.py
